# SE2018_Husemann_Wiest

./: .gitignore  Anleitung  README.md  UML-Parser.md  UML_Parser.md  draw.rs
Parser/: Cargo.toml  Klassendiagramm .txt  Klassendiagramm.txt  Object.txt  Usecasediagramm.txt  hello.txt
Parser/src/: .main.rs.swp  Objekte.txt  Untitled Document  draw.rs  drawing.rs  hello.txt  lib.rs  main  main.rs  maincopy.rs  text_viewer.glade  text_viewer.glade~
