[package]
name = "Parser"
version = "0.1.0"
authors = ["se"]

[dependencies]
conv = "0.3.1"
image = "0.20.0"
itertools = "0.7.0"
num = "0.2.0"
quickcheck = "0.6"
rand = "0.4.0"
rusttype = "0.5"
rayon = "1.0"
imageproc = "0.16.0"
chrono = "0.4"
url = "1.4"
futures-preview = { version = "0.2", optional = true }
gobject-subclass = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
pango = "^0"
cairo-rs = { version = "^0", features = ["png"] }

[features]
#default = ["gtk_3_22_30", "futures-stable"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
gtk_3_22_30 = ["gtk_3_22", "gtk/v3_22_30"] #for CI tools
futures-stable = ["futures-preview", "glib/futures", "gio/futures"]

[[bin]]
name = "main"
